--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,11 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.0-124.0.dev <3.0.0"
+  sdk: ">=2.15.0-268.0.dev <3.0.0"
 
 dependencies:
   socket_io: ^1.0.1
+
+dev_dependencies:
+  build_runner: ">=1.6.2 <3.0.0"
+  build_web_compilers: ">=2.12.0 <4.0.0"
