--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   socket_io: ^1.0.1
+  dart_native_compression: ^1.1.0+3
 
 dev_dependencies:
   build_runner: ">=1.6.2 <3.0.0"
