--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
 name: rpg_server
 description: Server for Online RPG.
-publish_to: 'none'
 version: 1.0.0+1
 
 environment:
@@ -11,5 +10,6 @@ dependencies:
   dart_native_compression: ^1.1.0+3
 
 dev_dependencies:
+  lints: ^1.0.0
   build_runner: ">=1.6.2 <3.0.0"
   build_web_compilers: ">=2.12.0 <4.0.0"
