--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   socket_io: ^1.0.1
   dart_native_compression: ^1.1.0+3
+  fixnum: ^1.0.0
 
 dev_dependencies:
   lints: ^1.0.0
